// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View>
  <RCTScrollView>
    <View>
      <View>
        <View>
          <View>
            <Text
              style={
                Array [
                  undefined,
                ]
              }
            >
              User Name
            </Text>
          </View>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              keyboardType="default"
              onChangeText={[Function]}
              rejectResponderTermination={true}
              returnKeyType="done"
              secureTextEntry={false}
              underlineColorAndroid="white"
            />
          </View>
        </View>
        <View>
          <View>
            <Text
              style={
                Array [
                  undefined,
                ]
              }
            >
              Email address
            </Text>
          </View>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              keyboardType="email-address"
              onChangeText={[Function]}
              rejectResponderTermination={true}
              returnKeyType="done"
              secureTextEntry={false}
              underlineColorAndroid="white"
            />
          </View>
        </View>
        <View>
          <View>
            <View>
              <Text
                style={
                  Array [
                    undefined,
                  ]
                }
              >
                Password
              </Text>
              <Text
                style={
                  Array [
                    undefined,
                    undefined,
                  ]
                }
              >
                  Min 8 chars
              </Text>
            </View>
            <View
              style={
                Array [
                  undefined,
                  undefined,
                ]
              }
            >
              <TextInput
                allowFontScaling={true}
                autoCapitalize="none"
                autoCorrect={false}
                keyboardType="default"
                onChangeText={[Function]}
                rejectResponderTermination={true}
                returnKeyType="done"
                secureTextEntry={false}
                underlineColorAndroid="white"
              />
            </View>
          </View>
          <View
            style={
              Array [
                undefined,
                undefined,
              ]
            }
          >
            <CheckboxField
              defaultColor="white"
              onSelect={[Function]}
              selected={true}
              selectedColor="#1995ea"
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    undefined,
                    Object {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </CheckboxField>
            <View
              accessible={true}
              clickable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  Array [
                    undefined,
                    undefined,
                  ]
                }
              >
                Show password
              </Text>
            </View>
          </View>
        </View>
        <View>
          <View>
            <Text
              style={
                Array [
                  undefined,
                ]
              }
            >
              Real name
            </Text>
            <Text
              style={
                Array [
                  undefined,
                  undefined,
                ]
              }
            >
                Optional
            </Text>
          </View>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              keyboardType="default"
              onChangeText={[Function]}
              rejectResponderTermination={true}
              returnKeyType="done"
              secureTextEntry={false}
              underlineColorAndroid="white"
            />
          </View>
          <Text
            style={
              Array [
                undefined,
                undefined,
              ]
            }
          >
            We'll use this to give you credit in scientific papers, etc.
          </Text>
        </View>
        <View>
          <CheckboxField
            containerStyle={
              Array [
                undefined,
                undefined,
              ]
            }
            defaultColor="white"
            onSelect={[Function]}
            selectedColor="#1995ea"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  undefined,
                  Object {
                    "fontFamily": "FontAwesome",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </CheckboxField>
          <View
            accessible={true}
            clickable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  undefined,
                  undefined,
                ]
              }
            >
              It’s okay to send me email occasionally.
            </Text>
          </View>
        </View>
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Karla",
                },
                undefined,
              ]
            }
          >
            Register
          </Text>
        </View>
        <View>
          <Text
            style={
              Array [
                undefined,
                undefined,
              ]
            }
          >
            By signing up, I agree to Zooniverse's 
          </Text>
          <View
            accessible={true}
            clickable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  undefined,
                  undefined,
                ]
              }
            >
              Privacy Policy
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`renders errors 1`] = `
<View>
  <RCTScrollView>
    <View>
      <View>
        <View>
          <View>
            <Text
              style={
                Array [
                  undefined,
                ]
              }
            >
              User Name
            </Text>
          </View>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              keyboardType="default"
              onChangeText={[Function]}
              rejectResponderTermination={true}
              returnKeyType="done"
              secureTextEntry={false}
              underlineColorAndroid="white"
            />
          </View>
        </View>
        <View>
          <View>
            <Text
              style={
                Array [
                  undefined,
                ]
              }
            >
              Email address
            </Text>
          </View>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              keyboardType="email-address"
              onChangeText={[Function]}
              rejectResponderTermination={true}
              returnKeyType="done"
              secureTextEntry={false}
              underlineColorAndroid="white"
            />
          </View>
        </View>
        <View>
          <View>
            <View>
              <Text
                style={
                  Array [
                    undefined,
                  ]
                }
              >
                Password
              </Text>
              <Text
                style={
                  Array [
                    undefined,
                    undefined,
                  ]
                }
              >
                  Min 8 chars
              </Text>
            </View>
            <View
              style={
                Array [
                  undefined,
                  undefined,
                ]
              }
            >
              <TextInput
                allowFontScaling={true}
                autoCapitalize="none"
                autoCorrect={false}
                keyboardType="default"
                onChangeText={[Function]}
                rejectResponderTermination={true}
                returnKeyType="done"
                secureTextEntry={false}
                underlineColorAndroid="white"
              />
            </View>
          </View>
          <View
            style={
              Array [
                undefined,
                undefined,
              ]
            }
          >
            <CheckboxField
              defaultColor="white"
              onSelect={[Function]}
              selected={true}
              selectedColor="#1995ea"
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    undefined,
                    Object {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </CheckboxField>
            <View
              accessible={true}
              clickable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  Array [
                    undefined,
                    undefined,
                  ]
                }
              >
                Show password
              </Text>
            </View>
          </View>
        </View>
        <View>
          <View>
            <Text
              style={
                Array [
                  undefined,
                ]
              }
            >
              Real name
            </Text>
            <Text
              style={
                Array [
                  undefined,
                  undefined,
                ]
              }
            >
                Optional
            </Text>
          </View>
          <View>
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              keyboardType="default"
              onChangeText={[Function]}
              rejectResponderTermination={true}
              returnKeyType="done"
              secureTextEntry={false}
              underlineColorAndroid="white"
            />
          </View>
          <Text
            style={
              Array [
                undefined,
                undefined,
              ]
            }
          >
            We'll use this to give you credit in scientific papers, etc.
          </Text>
        </View>
        <View>
          <CheckboxField
            containerStyle={
              Array [
                undefined,
                undefined,
              ]
            }
            defaultColor="white"
            onSelect={[Function]}
            selectedColor="#1995ea"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  undefined,
                  Object {
                    "fontFamily": "FontAwesome",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </CheckboxField>
          <View
            accessible={true}
            clickable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  undefined,
                  undefined,
                ]
              }
            >
              It’s okay to send me email occasionally.
            </Text>
          </View>
        </View>
        <Text
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        >
          Wrong!
        </Text>
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Karla",
                },
                undefined,
              ]
            }
          >
            Register
          </Text>
        </View>
        <View>
          <Text
            style={
              Array [
                undefined,
                undefined,
              ]
            }
          >
            By signing up, I agree to Zooniverse's 
          </Text>
          <View
            accessible={true}
            clickable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  undefined,
                  undefined,
                ]
              }
            >
              Privacy Policy
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
